# expert-funicular

./: .gitignore  CODE_REVIEW.md  README.md  pyproject.toml
brokerledger/: __init__.py  __main__.py  app.py  cli.py  config.py  paths.py  trace.py
brokerledger/affordability/: calculator.py
brokerledger/auth/: hashing.py  password_reset.py  service.py  session.py
brokerledger/categorize/: categorizer.py  corrections_cache.py  flags.py  icons.py  llm_client.py  memory.py  model_catalog.py  prompts.py  rules.py  siblings.py  taxonomy.py  training.py  web_lookup.py
brokerledger/clients/: service.py
brokerledger/db/: app_settings.py  engine.py  models.py  seed.py
brokerledger/export/: __init__.py  csv.py  pdf.py  xlsx.py
brokerledger/gui/: admin_users_view.py  audit_log_view.py  client_detail_view.py  clients_view.py  first_run.py  greetings.py  login_view.py  main_window.py  review_view.py  settings_view.py  theme.py  training_view.py
brokerledger/ingest/: csv_parser.py  normalize.py  pdf_ocr.py  pdf_text.py  router.py  xlsx_parser.py
brokerledger/mail/: __init__.py  smtp.py
brokerledger/users/: __init__.py  service.py
brokerledger/utils/: hashing.py  logging.py
docs/: model_setup.md  user_guide.md
tests/: conftest.py
tests/integration/: test_gui_smoke.py
tests/unit/: test_affordability_and_export.py  test_audit_service.py  test_auth.py  test_auth_admin.py  test_categorizer.py  test_clients_service.py  test_corrections_cache.py  test_csv_parser.py  test_export_csv.py  test_flags.py  test_llm_client.py  test_model_priority.py  test_normalize.py  (+10 more)
(+15 files in other folders)
